--- a/GestionVentas/.vscode/settings.json
+++ b/GestionVentas/.vscode/settings.json
@@ -11,6 +11,8 @@
         "c:\\Java\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.media.jar",
         "c:\\Java\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.swing.jar",
         "c:\\Java\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.web.jar",
-        "c:\\Java\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx-swt.jar"
+        "c:\\Java\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx-swt.jar",
+
+        "c:\\Java\\mssql-jdbc-12.8.1.jre11.jar"
     ]
 }
