--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,15 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Users\\emanu\\Downloads\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.base.jar",
-        "c:\\Users\\emanu\\Downloads\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.controls.jar",
-        "c:\\Users\\emanu\\Downloads\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.fxml.jar",
-        "c:\\Users\\emanu\\Downloads\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.graphics.jar",
-        "c:\\Users\\emanu\\Downloads\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.media.jar",
-        "c:\\Users\\emanu\\Downloads\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.swing.jar",
-        "c:\\Users\\emanu\\Downloads\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx.web.jar",
-        "c:\\Users\\emanu\\Downloads\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib\\javafx-swt.jar"
+        "c:\\Java\\javafx-sdk-22.0.2\\lib\\javafx.base.jar",
+        "c:\\Java\\javafx-sdk-22.0.2\\lib\\javafx.controls.jar",
+        "c:\\Java\\javafx-sdk-22.0.2\\lib\\javafx.fxml.jar",
+        "c:\\Java\\javafx-sdk-22.0.2\\lib\\javafx.graphics.jar",
+        "c:\\Java\\javafx-sdk-22.0.2\\lib\\javafx.media.jar",
+        "c:\\Java\\javafx-sdk-22.0.2\\lib\\javafx.swing.jar",
+        "c:\\Java\\javafx-sdk-22.0.2\\lib\\javafx.web.jar",
+        "c:\\Java\\javafx-sdk-22.0.2\\lib\\javafx-swt.jar",
+
+        "c:\\Java\\mssql-jdbc-12.8.1.jre11.jar"
     ]
 }
